// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FileListInput /> error renders 1`] = `
<div
  class="field field--touched field--file"
>
  <label
    class="field__label field__label--touched field__label--file"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <input
    aria-describedby="form-0_mock--error"
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--touched field__input--file"
    id="form-0_mock"
    multiple=""
    type="file"
  />
  <span
    class="field__error field__error--touched field__error--file"
    id="form-0_mock--error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<FileListInput /> help renders 1`] = `
<div
  class="field field--file"
>
  <label
    class="field__label field__label--file"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
    <span
      class="field__help field__help--file"
    >
      Help
    </span>
  </label>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--file"
    id="form-0_mock"
    multiple=""
    type="file"
  />
</div>
`;

exports[`<FileListInput /> label renders 1`] = `
<div
  class="field field--file"
>
  <label
    class="field__label field__label--file"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Label
  </label>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--file"
    id="form-0_mock"
    multiple=""
    type="file"
  />
</div>
`;

exports[`<FileListInput /> renders 1`] = `
<div
  class="field field--file"
>
  <label
    class="field__label field__label--file"
    for="form-0_mock"
    id="form-0_mock--label"
  >
    Example
  </label>
  <input
    aria-labelledby="form-0_mock--label"
    class="field__input field__input--file"
    id="form-0_mock"
    multiple=""
    type="file"
  />
</div>
`;
